--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,15 @@
     <dimen name="spacing_standard">16dp</dimen>
     <dimen name="spacing_tight">2dp</dimen>
     <dimen name="rounded_corner_2">2dp</dimen>
-
+    <dimen name="user_name_size">32sp</dimen>
+    <dimen name="margin_top">30dp</dimen>
+    <dimen name="stroke">1dp</dimen>
+    <dimen name="corner_radius">6dp</dimen>
+    <dimen name="padding_10">10dp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="edit_margin">50dp</dimen>
+    <dimen name="margin_end">20dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
+    <dimen name="button_height">40dp</dimen>
 
 </resources>
